[HOTFIX] - Add more memory to run app